2008-06-23  Jaroslav Hajek <highegg@gmail.com>

	* genprops.awk (emit_source): Avoid gensub for portability.
	(BEGIN): Ditto.

2008-06-20  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Make "once" an output
	argument.
	(octregexp): Do not use cell arrays when "once" is requested.

	* ov.cc (make_vector_dims): New function.
	(vector_value, complex_vector_value, float_vector_value,
	float_complex_vector_value): Query N-d array values and simplify,
	avoid copying.
	(column_vector_value, complex_column_vector_value,
	float_column_vector_value, float_complex_column_vector_value,
	row_vector_value, complex_row_vector_value,
	float_row_vector_value, float_complex_row_vector_value): 
	Simplify to trivial wrappers.
	(int_vector_value): Avoid conversions if integer type, query N-d array
	value, simplify.

2008-06-17  John W. Eaton  <jwe@octave.org>

	* toplev.h, toplev.cc (class octave_call_stack):
	Push elements on and pop from back of queue.
	(octave_call_stack::do_push, octave_call_stack::do_pop):
	Always adjust curr_frame.
	(octave_call_stack::size, octave_call_stack::do_size): New functions.
	* pt-stmt.cc (tree_statement::eval):
	Also call octave_call_stack::set_statement when debugging.
	* debug.cc (push_dummy_call_stack_elt): New function.
	(Fdbstack): Omit dbstack from call stack by popping element rather
	than adjusting frame number.  Correctly handle arg.

2008-06-12  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/qr.cc (Fqrupdate, Fqrinsert, Fqrshift, Fqrdelete):
	Allow single precision arguments, add tests for single precision.

2008-06-11  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (octave_base_value::streamoff_value,
	octave_base_value::streamoff_array_value): Delete.
	* ov-base.h: Delete decls.
	(octave_base_value::is_streamoff): Delete.
	* ov-float.cc (octave_float_scalar::streamoff_value,
	octave_float_scalar::streamoff_array_value): Delete.
	* ov-float.h: Delete decls.