@@ -1,3 +1,7 @@
+2008-06-23  John W. Eaton  <jwe@octave.org>
+
+	* debug.cc (Fdbstack): Avoid shadowed variable warning.
+
 2008-06-23  Jaroslav Hajek <highegg@gmail.com>
 
 	* genprops.awk (emit_source): Avoid gensub for portability.
